--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-0b5c8c19-b6d8-4d8c-96aa-b3af13c06c24;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
