MySql adaption and first migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-0b5c8c19-b6d8-4d8c-96aa-b3af13c06c24;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "server=localhost;userid=root;password=1234567;database=saleswebmvcappdb"
+    
   }
 }
